s/utils.load_from/load_data.load_from

--- a/test/_tune_augmentor.ipynb
+++ b/test/_tune_augmentor.ipynb
@@ -46,11 +46,11 @@
     "    test_dname = '../examples/dataset/brain/validation'\n",
     "    df = utils.df_fromdir(train_dname)\n",
     "    df = utils.oversampling_df(df, 80)\n",
-    "    #x_train, y_train = utils.load_fromdf(df, resize=96)\n",
-    "    x_train, y_train = utils.load_fromdf(df, resize=96, rescale=1)\n",
+    "    #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
+    "    x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
     "    df = utils.df_fromdir(test_dname)\n",
-    "    #x_test, y_test = utils.load_fromdf(df)\n",
-    "    x_test, y_test = utils.load_fromdf(df, resize=96, rescale=1)\n",
+    "    #x_test, y_test = load_data.load_fromdf(df)\n",
+    "    x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
     "\n",
     "    y_train = to_categorical(y_train)\n",
     "    y_test = to_categorical(y_test)\n",
@@ -187,11 +187,11 @@
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
       "  4: df = utils.df_fromdir(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
-      "  6: #x_train, y_train = utils.load_fromdf(df, resize=96)\n",
-      "  7: x_train, y_train = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
+      "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       "  8: df = utils.df_fromdir(test_dname)\n",
-      "  9: #x_test, y_test = utils.load_fromdf(df)\n",
-      " 10: x_test, y_test = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
+      " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
       " 12: y_train = to_categorical(y_train)\n",
       " 13: y_test = to_categorical(y_test)\n",
@@ -817,11 +817,11 @@
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
       "  4: df = utils.df_fromdir(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
-      "  6: #x_train, y_train = utils.load_fromdf(df, resize=96)\n",
-      "  7: x_train, y_train = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
+      "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       "  8: df = utils.df_fromdir(test_dname)\n",
-      "  9: #x_test, y_test = utils.load_fromdf(df)\n",
-      " 10: x_test, y_test = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
+      " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
       " 12: y_train = to_categorical(y_train)\n",
       " 13: y_test = to_categorical(y_test)\n",
