--- a/test/tune_augmentor.ipynb
+++ b/test/tune_augmentor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,13 @@
     "import json\n",
     "\n",
     "from tuner import utils\n",
+    "from tuner import load_data\n",
     "import net"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -46,58 +47,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = utils.df_fromdir('brain')"
+    "df = load_data.df_fromdir('brain')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'tuner.utils' has no attribute 'load_df'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-9b1b1c52f2d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'tuner.utils' has no attribute 'load_df'"
-     ]
+     "data": {
+      "text/plain": [
+       "(  name       label                 path\n",
+       " 0   MS       train       brain/train/MS\n",
+       " 1   PD       train       brain/train/PD\n",
+       " 2    N       train        brain/train/N\n",
+       " 3   PS       train       brain/train/PS\n",
+       " 4   MS  validation  brain/validation/MS\n",
+       " 5   PD  validation  brain/validation/PD\n",
+       " 6    N  validation   brain/validation/N\n",
+       " 7   PS  validation  brain/validation/PS, Empty DataFrame\n",
+       " Columns: [name, label, path]\n",
+       " Index: [])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "utils.load_df(df)"
+    "load_data.train_val_split_df(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'tuner.utils' has no attribute 'train_val_split_df'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-00830ca30138>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_val_split_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'tuner.utils' has no attribute 'train_val_split_df'"
-     ]
-    }
-   ],
-   "source": [
-    "utils.train_val_split_df(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -111,9 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tuner.load_data' has no attribute 'format_dataset_brain'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-4cc8d05710c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtuner\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mload_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat_dataset_brain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'brain'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'new'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tuner.load_data' has no attribute 'format_dataset_brain'"
+     ]
+    }
+   ],
    "source": [
     "from tuner import load_data\n",
     "\n",
@@ -162,11 +163,11 @@
     "    test_dname = '../examples/dataset/brain/validation'\n",
     "    df = utils.df_fromdir(train_dname)\n",
     "    df = utils.oversampling_df(df, 80)\n",
-    "    #x_train, y_train = utils.load_fromdf(df, resize=96)\n",
-    "    x_train, y_train = utils.load_fromdf(df, resize=96, rescale=1)\n",
+    "    #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
+    "    x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
     "    df = utils.df_fromdir(test_dname)\n",
-    "    #x_test, y_test = utils.load_fromdf(df)\n",
-    "    x_test, y_test = utils.load_fromdf(df, resize=96, rescale=1)\n",
+    "    #x_test, y_test = load_data.load_fromdf(df)\n",
+    "    x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
     "\n",
     "    y_train = to_categorical(y_train)\n",
     "    y_test = to_categorical(y_test)\n",
@@ -303,11 +304,11 @@
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
       "  4: df = utils.df_fromdir(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
-      "  6: #x_train, y_train = utils.load_fromdf(df, resize=96)\n",
-      "  7: x_train, y_train = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
+      "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       "  8: df = utils.df_fromdir(test_dname)\n",
-      "  9: #x_test, y_test = utils.load_fromdf(df)\n",
-      " 10: x_test, y_test = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
+      " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
       " 12: y_train = to_categorical(y_train)\n",
       " 13: y_test = to_categorical(y_test)\n",
@@ -910,11 +911,11 @@
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
       "  4: df = utils.df_fromdir(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
-      "  6: #x_train, y_train = utils.load_fromdf(df, resize=96)\n",
-      "  7: x_train, y_train = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
+      "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       "  8: df = utils.df_fromdir(test_dname)\n",
-      "  9: #x_test, y_test = utils.load_fromdf(df)\n",
-      " 10: x_test, y_test = utils.load_fromdf(df, resize=96, rescale=1)\n",
+      "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
+      " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
       " 12: y_train = to_categorical(y_train)\n",
       " 13: y_test = to_categorical(y_test)\n",
