Clear test_augment_data

--- a/examples/test.ipynb
+++ b/examples/test.ipynb
@@ -36,8 +36,8 @@
    "source": [
     "train_dir = 'dataset/brain/train'\n",
     "validation = 'dataset/brain/validation'\n",
-    "df_train = utils.df_fromdir(train_dir)\n",
-    "df_test = utils.df_fromdir(train_dir)\n",
+    "df_train = utils.df_fromdir_classed(train_dir)\n",
+    "df_test = utils.df_fromdir_classed(train_dir)\n",
     "\n",
     "x_train, y_train = load_data.load_fromdf(df_train)\n",
     "x_test, y_test = load_data.load_fromdf(df_test)\n",
