--- a/test/test_____.ipynb
+++ b/test/test_____.ipynb
@@ -21,7 +21,7 @@
     "import os\n",
     "import shutil\n",
     "import tuner\n",
-    "from tuner.load_data import format_brain, df_fromdir, train_val_split_df, load_fromdir, load_fromdf\n",
+    "from tuner.load_data import format_brain, df_fromdir_classed, train_val_split_df, load_fromdir, load_fromdf\n",
     "from tuner.augment_data import search_condition, augment_dataset"
    ]
   },
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "df = df_fromdir('brain')\n",
+    "df = df_fromdir_classed('brain')\n",
     "\n",
     "df_train, df_val = train_val_split_df(df)\n",
     "df_train.shape, df_val.shape"
@@ -134,7 +134,7 @@
       "    pass\n",
       "\n",
       "try:\n",
-      "    from tuner.load_data import df_fromdir, load_fromdf\n",
+      "    from tuner.load_data import df_fromdir_classed, load_fromdf\n",
       "except:\n",
       "    pass\n",
       "\n",
