--- a/test/test_augment_data.ipynb
+++ b/test/test_augment_data.ipynb
@@ -2,35 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fytroo/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
     "\n",
     "import net\n",
-    "from tuner.load_data import format_brain, load_fromdf\n",
+    "from tuner import load_data\n",
+    "from tuner.load_data import classed_dir_fromdf, load_fromdf\n",
     "from tuner.augment_data import augment_dataset\n",
     "from tuner import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if os.path.exists('brain'):\n",
@@ -41,7 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_brain =load_data.df_fromdir_brain('../micin-dataset/brain')\n",
+    "load_data.classed_dir_fromdf(df_brain, 'brain')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -50,30 +53,60 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing MS83.jpg:  33%|███▎      | 10/30 [00:00<00:00, 62.14 Samples/s]"
+      "Processing MS83.jpg:  33%|███▎      | 10/30 [00:00<00:00, 60.57 Samples/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialised with 246 image(s) found.\n",
-      "Output directory set to brain/train/output."
+      "Initialised with 51 image(s) found.\n",
+      "Output directory set to brain/MS/output."
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing PD034.jpg:  37%|███▋      | 11/30 [00:00<00:00, 85.90 Samples/s]"
+      "Processing PD116.jpg:  20%|██        | 6/30 [00:00<00:00, 36.33 Samples/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialised with 20 image(s) found.\n",
-      "Output directory set to brain/validation/output."
+      "Initialised with 51 image(s) found.\n",
+      "Output directory set to brain/PD/output."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing N022.jpg:  63%|██████▎   | 19/30 [00:00<00:00, 106.71 Samples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialised with 84 image(s) found.\n",
+      "Output directory set to brain/N/output."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PS107.jpg:  17%|█▋        | 5/30 [00:00<00:00, 32.80 Samples/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialised with 80 image(s) found.\n",
+      "Output directory set to brain/PS/output."
      ]
     },
     {
@@ -85,39 +118,8 @@
     }
    ],
    "source": [
-    "augment_dataset('brain', 'new', 30)"
+    "augment_dataset('brain', '../new', 30)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_val_split_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-4b6e35a07712>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_val_split_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_fromdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'new'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_val_split_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df_train, df_val = train_val_split_df(df_fromdir('new'))\n",
-    "x_train, y_train = load_from()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
