--- a/test/tune_augmentor.ipynb
+++ b/test/tune_augmentor.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = load_data.df_fromdir('brain')"
+    "df = load_data.df_fromdir_classed('brain')"
    ]
   },
   {
@@ -161,11 +161,11 @@
    "source": [
     "def data():\n",
     "    test_dname = '../examples/dataset/brain/validation'\n",
-    "    df = utils.df_fromdir(train_dname)\n",
+    "    df = utils.df_fromdir_classed(train_dname)\n",
     "    df = utils.oversampling_df(df, 80)\n",
     "    #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
     "    x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
-    "    df = utils.df_fromdir(test_dname)\n",
+    "    df = utils.df_fromdir_classed(test_dname)\n",
     "    #x_test, y_test = load_data.load_fromdf(df)\n",
     "    x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
     "\n",
@@ -302,11 +302,11 @@
       "  1: \n",
       "  2: train_dname = '../examples/dataset/brain/train'\n",
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
-      "  4: df = utils.df_fromdir(train_dname)\n",
+      "  4: df = utils.df_fromdir_classed(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
       "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
       "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
-      "  8: df = utils.df_fromdir(test_dname)\n",
+      "  8: df = utils.df_fromdir_classed(test_dname)\n",
       "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
       " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
@@ -909,11 +909,11 @@
       "  1: \n",
       "  2: train_dname = '../examples/dataset/brain/train'\n",
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
-      "  4: df = utils.df_fromdir(train_dname)\n",
+      "  4: df = utils.df_fromdir_classed(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
       "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
       "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
-      "  8: df = utils.df_fromdir(test_dname)\n",
+      "  8: df = utils.df_fromdir_classed(test_dname)\n",
       "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
       " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
