--- a/test/_tune_augmentor.ipynb
+++ b/test/_tune_augmentor.ipynb
@@ -44,11 +44,11 @@
     "def data():\n",
     "    train_dname = '../examples/dataset/brain/train'\n",
     "    test_dname = '../examples/dataset/brain/validation'\n",
-    "    df = utils.df_fromdir(train_dname)\n",
+    "    df = utils.df_fromdir_classed(train_dname)\n",
     "    df = utils.oversampling_df(df, 80)\n",
     "    #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
     "    x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
-    "    df = utils.df_fromdir(test_dname)\n",
+    "    df = utils.df_fromdir_classed(test_dname)\n",
     "    #x_test, y_test = load_data.load_fromdf(df)\n",
     "    x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
     "\n",
@@ -185,11 +185,11 @@
       "  1: \n",
       "  2: train_dname = '../examples/dataset/brain/train'\n",
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
-      "  4: df = utils.df_fromdir(train_dname)\n",
+      "  4: df = utils.df_fromdir_classed(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
       "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
       "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
-      "  8: df = utils.df_fromdir(test_dname)\n",
+      "  8: df = utils.df_fromdir_classed(test_dname)\n",
       "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
       " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
@@ -815,11 +815,11 @@
       "  1: \n",
       "  2: train_dname = '../examples/dataset/brain/train'\n",
       "  3: test_dname = '../examples/dataset/brain/validation'\n",
-      "  4: df = utils.df_fromdir(train_dname)\n",
+      "  4: df = utils.df_fromdir_classed(train_dname)\n",
       "  5: df = utils.oversampling_df(df, 80)\n",
       "  6: #x_train, y_train = load_data.load_fromdf(df, resize=96)\n",
       "  7: x_train, y_train = load_data.load_fromdf(df, resize=96, rescale=1)\n",
-      "  8: df = utils.df_fromdir(test_dname)\n",
+      "  8: df = utils.df_fromdir_classed(test_dname)\n",
       "  9: #x_test, y_test = load_data.load_fromdf(df)\n",
       " 10: x_test, y_test = load_data.load_fromdf(df, resize=96, rescale=1)\n",
       " 11: \n",
