Clear cmdline-flow-brain

--- a/test/cmdline-flow-brain.ipynb
+++ b/test/cmdline-flow-brain.ipynb
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1369,9 +1369,7 @@
       " - 1s - loss: 0.3436 - acc: 0.8818 - val_loss: 2.5250 - val_acc: 0.4500\n",
       "Epoch 9/10\n",
       " - 1s - loss: 0.2014 - acc: 0.9375 - val_loss: 2.2043 - val_acc: 0.5000\n",
-      "Epoch 10/10\n",
-      " - 1s - loss: 0.1610 - acc: 0.9497 - val_loss: 3.4168 - val_acc: 0.4500\n",
-      "Test accuracy: 0.449999988079\n"
+      "Epoch 10/10\n"
      ]
     }
    ],
